tests/errors/synonym_arity_err/synonym_arity_err.c
#error synonym_arity_err.synonym_arity_err:7:14 Type arity mismatch. The type 'Stack' expected 1 arguments; but given 2.
#error synonym_arity_err.synonym_arity_err:10:14 Type arity mismatch. The type 'Stack' expected 1 arguments; but given 0.
